--- a/CSS/index.css
+++ b/CSS/index.css
@@ -19,6 +19,36 @@ img{
   pointer-events: none;
 }
 
+a{
+  border: 1px white solid;
+  border-right: 0px;
+  padding-left: 25px;
+  padding-right: 25px;
+  text-decoration: none;
+}
+
+a:link{
+  color: white;
+}
+a:visited{
+  color: white;
+}
+a:hover{
+  color: rgba(255,255,255,0.5);
+}
+a:active{
+  color: white;
+}
+
+#overlay{
+  top:0;
+  left:0;
+  position:absolute;
+  z-index: 5;
+  width: 100%;
+  height:100%;
+}
+
 #text{
   top:0;
   left:0;
@@ -32,6 +62,20 @@ img{
   text-align: center;
   font-size: 75px;
   background-color: rgba(0,0,0,0.3);
+}
+
+#nav{
+  top:150px;
+  left:0;
+  display: flex;
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  z-index: 3;
+  text-align: center;
+  font-size: 60px;
 }
 
 #container{
